fix: Fix overflow on content

--- a/src/ui/themes/dark.css
+++ b/src/ui/themes/dark.css
@@ -7,10 +7,6 @@ html, body, h1, h2, h3, h4, h5, h6, p, div, span, a, ul, li, button, input, text
 
 html, body {
   height: 100%;
-}
-
-html, body {
-  height: 100%;
   margin: 0;
 }
 
